# mirror-im

./: CMakeLists.txt  config_lua_module  imffi.lua
dox/: im.dox
html/: wb_search.txt  wb_title.html  wb_tree.html
html/en/: capture.html  capture_guide.html  copyright.html  download.html  history.html  home.html  prod.html  samples.html  svn.html  to_do.html
html/examples/: makevideo.lua
html/wb/: wb_usr.lua
include/: im_binfile.h  im_capture.h  im_colorhsi.h  im_convert.h  im_counter.h  im_dib.h  im_format_all.h  im_lib.h  im_math.h  im_plus.h  im_process_ana.h  im_process_glo.h  im_process_loc.h  im_process_pnt.h  im_util.h
mak.vc10/: im_avi.vcxproj  im_copy.vcxproj  im_ecw.vcxproj  im_info.vcxproj  im_wmv.vcxproj  im_zlib.vcxproj  imlua51.vcxproj  imlua52.vcxproj  imlua_fftw51.vcxproj  imlua_process52.vcxproj
mak.vc12/: im.sln  im.vcxproj  im.vcxproj.filters  im_copy.vcxproj  im_info.vcxproj  im_jp2.vcxproj  im_view.vcxproj  im_view.vcxproj.filters  im_wmv.vcxproj  im_zlib.vcxproj  imlua3.vcxproj  imlua51.vcxproj  imlua_fftw51.vcxproj  imlua_fftw52.vcxproj  imlua_process51.vcxproj  imlua_process52.vcxproj
src/: Makefile  config.mak  im.def  im.rc  im_attrib.cpp  im_bin.cpp  im_binfile.cpp  im_capture_dx.cpp  im_colorhsi.cpp  im_colormode.cpp  im_colorutil.cpp  im_compress.cpp  im_convertbitmap.cpp  im_converttype.cpp  im_counter.cpp  im_datatype.cpp  im_dib.cpp  im_dibxbitmap.cpp  im_file.cpp  im_filebuffer.cpp  im_fileraw.cpp  im_format.cpp  im_format_avi.cpp  im_format_bmp.cpp  im_format_gif.cpp  im_format_ico.cpp  im_format_jp2.cpp  im_format_jpeg.cpp  im_format_krn.cpp  im_format_led.cpp  im_format_pfm.cpp  im_format_png.cpp  im_format_pnm.cpp  im_format_ras.cpp  im_format_raw.cpp  im_format_sgi.cpp  im_format_tga.cpp  im_format_tiff.cpp  im_format_wmv.cpp  im_image.cpp  (+16 more)
src/fftw3/api/: version.c
src/fftw3/dft/: buffered.c  conf.c  ct-dit.c  ct.h  indirect.c  kdft-difsq.c  kdft-dit.c  kdft.c  plan.c  problem.c  rank0.c  vrank2-transpose.c  vrank3-transpose.c  zero.c
src/fftw3/kernel/: align.c  assert.c  cycle.h  debug.c  iabs.c  kplan.c  kproblem.c  minmax.c  pickdim.c  planner.c  primes.c  print.c  scan.c  solver.c  solvtab.c  square.c  tensor.c  tensor1.c  tensor4.c  tensor5.c  tensor7.c  tensor8.c  tensor9.c  trig.c
src/fftw3/rdft/: dft-r2hc.c  dht-r2hc.c  direct2.c  hc2hc-buf.c  hc2hc-dit.c  khc2hc-dif.c  nop2.c  plan2.c  problem2.c  rconf.c  rdft2-radix2.c  rdft2-tensor-max-index.c  rindirect.c  rnop.c  vrank-geq1-rdft2.c
src/fftw3/reodft/: redft00e-r2hc-pad.c  reodft11e-r2hc.c  reodft11e-radix2.c
src/libtiff/: t4.h  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_flush.c  tif_getimage.c  tif_jpeg.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_open.c  tif_packbits.c  tif_pixarlog.c  tif_predict.c  tif_predict.h  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_version.c  tif_warning.c  tif_write.c  tif_zip.c  tiff.h  tiffio.h  tiffiop.h
src/lua5/: im_process.lua  imlua.c  imlua_aux.c  imlua_aux.h  imlua_capture.c  imlua_convert.c  imlua_fftw.c  imlua_file.c  imlua_image.c  imlua_palette.c  imlua_process.c  imlua_util.c
src/lua5/lh/: im_process.lh
src/process/: im_analyze.cpp  im_arithmetic_bin.cpp  im_arithmetic_un.cpp  im_canny.cpp  im_color.cpp  im_convolve.cpp  im_effects.cpp  im_fft.cpp  im_geometric.cpp  im_histogram.cpp  im_houghline.cpp  im_morphology_bin.cpp  im_morphology_gray.cpp  im_point.cpp  im_quantize.cpp  im_render.cpp  im_resize.cpp  im_statistics.cpp  im_threshold.cpp  im_tonegamut.cpp
src/zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
test/: im_copy.cpp  im_info.cpp  im_view.cpp
trunk/im/: COPYRIGHT
trunk/im/dox/: guide.txt
trunk/im/html/: gSearch.html  wb_search.txt  wb_title.html  wb_tree.html
trunk/im/html/en/: copyright.html  download.html  guide.html  history.html  home.html  imlua.html  prod.html  svn.html  to_do.html
trunk/im/html/examples/: makevideo.lua  setpixels.lua
trunk/im/html/wb/: wb_pdf.bat  wb_usr.lua
trunk/im/include/: im.h  im_binfile.h  im_capture.h  im_color.h  im_colorhsi.h  im_complex.h  im_convert.h  im_format_all.h  im_image.h  im_lib.h  im_math.h  im_math_op.h  im_palette.h  im_plus.h  im_process_ana.h  im_process_glo.h  im_process_loc.h  im_process_pnt.h  im_util.h
trunk/im/mak.vc10/: im.vcxproj  im_capture.vcxproj  im_fftw.vcxproj  im_jp2.vcxproj  im_process.vcxproj  im_view.vcxproj  imlua3.vcxproj  imlua_capture51.vcxproj  imlua_capture52.vcxproj  imlua_fftw52.vcxproj  imlua_process51.vcxproj
trunk/im/mak.vc12/: im.sln  im.vcxproj  im.vcxproj.filters  im_avi.vcxproj  im_capture.vcxproj  im_copy.vcxproj  im_ecw.vcxproj  im_fftw.vcxproj  im_info.vcxproj  im_process.vcxproj  im_view.vcxproj  im_zlib.vcxproj  imlua51.vcxproj  imlua52.vcxproj  imlua_capture51.vcxproj  imlua_capture52.vcxproj  imlua_fftw51.vcxproj  imlua_process51.vcxproj  imlua_process52.vcxproj
trunk/im/src/: Makefile  config.mak  im.def  im_attrib.cpp  im_binfile.cpp  im_capture_dx.cpp  im_colorhsi.cpp  im_compress.cpp  im_convertbitmap.cpp  im_convertcolor.cpp  im_converttype.cpp  im_datatype.cpp  im_fftw3.mak  im_file.cpp  im_filebuffer.cpp  im_fileraw.cpp  im_format.cpp  im_format_all.cpp  im_format_avi.cpp  im_format_bmp.cpp  im_format_gif.cpp  im_format_ico.cpp  im_format_jp2.cpp  im_format_jpeg.cpp  im_format_krn.cpp  im_format_led.cpp  im_format_pcx.cpp  im_format_pfm.cpp  im_format_png.cpp  im_format_pnm.cpp  im_format_ras.cpp  im_format_raw.cpp  im_format_sgi.cpp  im_format_tga.cpp  im_format_tiff.cpp  im_format_wmv.cpp  im_image.cpp  im_lib.cpp  im_lua3.c  im_palette.cpp  (+16 more)
trunk/im/src/libtiff/: t4.h  tif_aux.c  tif_close.c  tif_codec.c  tif_color.c  tif_compress.c  tif_config.h  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  (+24 more)
trunk/im/test/: im_copy.cpp  im_view.cpp
(+239 files in other folders)
